kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-rating
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-rating
  template:
    metadata:
      labels:
        app: movie-rating
    spec:
      containers:
        - name: movie-rating
          image: docker.io/arthurvb/movie-rating:a730c45 # {"$imagepolicy": "flux-system:movie-rating-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
